# gitlog

./: .gitignore  README.md  pyproject.toml
hooks/: pre-commit
src/gitlog/: app.py  main.py  version.py
